@@ -6,13 +6,13 @@ public class Consulta {
         return pedido.getProdutos()
                      .stream()
                      .filter(p -> p.getCategoria() == CategoriaProduto.LIVRO)
-                     .toList();
+                     .collect(Collectors.toList());
     }
 
     public static Produto obterProdutoMaiorPreco(List<Produto> produtos) {
         return produtos.stream()
                        .sorted(Comparator.comparing(Produto::getPreco).reversed())
-                       .toList()
+                       .collect(Collectors.toList())
                        .get(0);
     }
 
@@ -20,14 +20,14 @@ public class Consulta {
         double precoMinimo) {
         return produtos.stream()
                        .filter(p -> p.getPreco() >= precoMinimo)
-                       .toList();
+                       .collect(Collectors.toList());
     }
 
     public static List<Pedido> obterPedidosComEletronicos(List<Pedido> pedidos) {
         return pedidos.stream()
                       .filter(p -> p.getProdutos().stream()
                                                   .anyMatch(e -> e.getCategoria() == CategoriaProduto.ELETRONICO))
-                      .toList();
+                      .collect(Collectors.toList());
     }
 
     public static List<Produto> aplicar15PorcentoDescontoEletronicos(List<Produto> produtos) {
@@ -37,6 +37,6 @@ public class Consulta {
                                 p.setPreco(p.getPreco() * 0.85f);
                             return p;
                        })
-                       .toList();
+                       .collect(Collectors.toList());
     }    
 }
